app/assets/stylesheets/home.css.scss
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/*
 * -- BASE STYLES --
 * Most of these are inherited from Base, but I want to change a few.
 */
body {
    color: #526066;
    font-family: 'Helvetica';
}

h2, h3 {
    letter-spacing: 0.25em;
    text-transform: uppercase;
    font-weight: 600;
}

p {
    line-height: 1.6em;
}

li.brand-css{
	text-decoration:none !important;
}
.brand-css{
	width:50%;
}
.brand-css:hover{
	text-decoration:none !important;
	background:none !important;
}

/*
 * -- Layout Styles --
 */
.l-content {
    margin: 0 auto;
}

.l-box {
	margin-top:10px;
    padding:40px;
}

.privacy-policy{
	float:right;
}

.copyright{
	margin-bottom:-20px;
	color:#5A636D;
}

/*
 * -- MENU STYLES --
 * Make the menu have a very faint box-shadow.
 */
.pure-menu {
	margin-top:15px;
    font-size:16px;
}


/*
 * -- BANNER --
 * The top banner with the headings. By using a combination
 * of `display: table;` and `display: table-cell;`, we can
 * vertically center the text.
 */
.banner {
    background: transparent url('http://farm3.staticflickr.com/2227/1795769113_cf6268b8fd_b.jpg') 0 0 no-repeat fixed;
    text-align: center;
    background-size: cover;
    height: 350px;
    width: 100%;
    margin-bottom: 3em;
    display: table;
}

    .banner-head {
        display: table-cell;
        vertical-align: middle;
        margin-bottom: 0;
        color: rgba(255, 127, 0, 1.000);
        font-weight: 500;
        text-shadow: 0 1px 1px black;
		font-size:64px;
    }



/*
 * -- PRICING TABLE WRAPPER --
 * This element wraps up all the pricing table elements
 */
 .pricing-tables,
 .information {
    max-width: 980px;
    margin: 0 auto;
 }
.pricing-tables {
    margin-bottom: 3.125em;
    text-align: center;
}

/*
 * -- PRICING TABLE  --
 * Every pricing table has the .pricing-table class
 */
.pricing-table {
    border: 1px solid #ddd;
    margin: 0 0.5em;

}

/*
 * -- PRICING TABLE HEADER COLORS --
 * Choose a different color based on the type of pricing table.
 */
.pricing-table-free .pricing-table-header {
    background: #2C94D2;
}

.pricing-table-biz .pricing-table-header {
    background: #2c4985;
}

/*
 * -- PRICING TABLE HEADER --
 * By default, a header is black/white, and has some styles for its <h2> name.
 */
.pricing-table-header {
    background: #111;
    color: #fff;
}
    .pricing-table-header h2 {
        margin: 0;
        padding-top: 2em;
        font-size: 16px;
        font-weight: normal;
		margin-bottom:2em;

    }


/*
 * -- PRICING TABLE PRICE --
 * Styles for the price and the corresponding <span>per month</span>
 */
.pricing-table-price {
    font-size: 7em;
    margin-top: 0.2em 0 0;
    font-weight: 100;
	font-height: 40px;
}
    .pricing-table-price span {
        display: block;
        text-transform: uppercase;
        font-size: 0.2em;
		padding-top: 20px;
        padding-bottom: 2em;
        font-weight: 400;
        color: rgba(255, 255, 255, 0.5);
        *color: #fff;
    }



/*
 * -- PRICING TABLE LIST --
 * Each pricing table has a <ul> which is denoted by the .pricing-table-list class
 */
.pricing-table-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;
	font-size:16px;
}


/*
 * -- PRICING TABLE LIST ELEMENTS --
 * Styles for the individual list elements within each pricing table
 */
.pricing-table-list li {
    padding: 0.8em 0;
    background: #f7f7f7;
    border-bottom: 1px solid #e7e7e7;
}


/*
 * -- PRICING TABLE BUTTON --
 * Styles for the "Choose" button at the bottom of a pricing table.
 * This inherits from Pure Button.
 */
.button-choose {
    border: 1px solid #ccc;
    background: #fff;
    color: #333;
    border-radius: 2em;
    font-weight: bold;
    position: relative;
    font-size:16px;
}


.information-head {
	font-family:'Helvetica';
    color: black;
    font-weight: 500;
    font-size:19px;
}

.information-head-p{
	font-family:'Helvetica';
	text-align: left;
	font-size:16px;
}


.footer {
    background: black;
    color: #888;
    text-align: center;
    font-size:16px;
}
    .footer a {
        color: #ddd;
		font-size:16px;
    }



/*
 * -- TABLET MEDIA QUERIES --
 * On tablets, we want to slightly adjust the size of the banner
 * text and add some vertical space between the various pricing tables
 */
@media(max-width: 767px) {

    .banner-head {
        font-size: 3em;
    }
    .pricing-table {
        margin-bottom: 2em;
    }

}

/*
 * -- PHONE MEDIA QUERIES --
 * On phones, we want to reduce the height and font-size of the banner further
 */
@media (max-width: 480px) {
    .banner {
        height: 200px;
    }
    .banner-head {
        font-size: 2em;
    }
}

.elpuntocover{
	width:70%;
}

.epc{
	width:100%;
}

.epnlogo{
	width:90%;
	margin-top:40px;
	margin-left:-10px;
}

.coming-soon{
	margin-top:-50px;
	font-weight:800;
	padding:10px;
	text-align:center;
	color:rgba(249, 158, 30, 1.000);
}

